--- a/wp-content/themes/icuinparis/style.css
+++ b/wp-content/themes/icuinparis/style.css
@@ -18,7 +18,7 @@ Version:        1.0
 body {
   font-size: 1.3em;
   line-height: 1.618;
-  color: #999999;
+  color: #666;
   background: #ffffff;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -309,7 +309,7 @@ header h1 {
 	padding: 12px 20px 30px 190px; 
 	text-shadow:none; 
 	font-size:2.5em; 
-	font-weight:200;
+	font-weight:normal;
 	color:#000000; 
 	text-transform:uppercase;	
 	font-family: 'Source Sans Pro', sans-serif;	
@@ -322,4 +322,63 @@ header h1 {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     margin: 0 0 0 0;
     padding: 0;
+}
+
+
+.type-page, .search-results article.page {
+	border-bottom: none;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+}
+
+.page #content header{
+	margin: 0px 5% 0px 20%;
+}
+
+.page #content header h1 {
+	padding: 25px 0px 10px 0px; 
+	text-shadow:none; 
+	font-size:2.5em; 
+	font-weight:normal;
+	color:#000000; 
+	text-transform:uppercase;	
+	font-family: 'Source Sans Pro', sans-serif;	
+}
+
+.page #content header p {
+	
+	margin:0px;
+}
+
+.page #content p, .search-results article.page #content p {
+	margin:20px 10%;
+}
+
+body #content{
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+}
+
+
+.page-template-single-about-php header{
+	background: #0fb7ba;
+	text-align: center;
+	width: 100%;
+	padding: 100px 0px;
+}
+
+.page-template-single-about-php header img{
+	width:95%;
+	max-width:397px;
+}
+
+.page-template-single-about-php #footer-widgets {
+	background:none;
+	padding: 0px;
+}
+
+@media screen and (max-width: 480px) {
+	.page #content header{
+		margin: 0px 5% 0px 7%;
+	}
 }
