--- a/wp-content/themes/icuinparis/style.css
+++ b/wp-content/themes/icuinparis/style.css
@@ -28,6 +28,10 @@ body {
   text-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }  
 
+a{
+	color:#000000;
+}
+
 div#logoposition {
 	width:140px; 
 	position:absolute; 
@@ -366,6 +370,10 @@ body #content{
 	max-width:397px;
 }
 
+.page-template-single-about-php #sidebar{
+	display: none;
+}
+
 .page-template-single-about-php #footer-widgets {
 	background:none;
 	padding: 0px;
@@ -394,7 +402,7 @@ div#ourdesigners {
 #ourdesigners .designer .popup{
 	display:none;
 	width:323px;
-	margin-top: 150px;
+	margin-top: 105px;
 	background-color:#E3B1B7;
 	padding-bottom:10px;
 	padding-top:10px;
