--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -42,3 +42,37 @@ ul.sub-menu li {
     border-left: 0px solid #565656;
     border-bottom: 1px solid #848484;
 }
+
+.dropdown-menu{
+    background-color: #666666;
+    color: white;
+    border:none;
+    border-radius: 0;
+    -moz-border-radius: 0;
+}
+
+.navbar .nav > li > .dropdown-menu:before,.navbar .nav > li > .dropdown-menu:after {
+    border:none; 
+    
+    }
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
+    background-color: #0081C2;
+    background-image: none;
+    background-repeat: repeat-x;
+    color: #FFFFFF;
+    text-decoration: none;
+    
+}
+.dropdown-menu > li > a{
+    clear: both;
+    color: #fff;
+display: block;
+font-weight: normal;
+line-height: 20px;
+padding: 3px 20px;
+white-space: nowrap;
+}
+
+.dropdown-menu > li > a:hover{
+    background-color: #999999;
+}
